--- a/gen-fdv-json-testtreiber/pom.xml
+++ b/gen-fdv-json-testtreiber/pom.xml
@@ -57,55 +57,72 @@
             <artifactId>joda-time</artifactId>
             <version>2.10.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.fluentcodes.tools</groupId>
+            <artifactId>xpect-snake</artifactId>
+            <version>0.5.0</version>
+        </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <!-- options see https://github.com/OpenAPITools/openapi-generator/blob/master/docs/generators/jaxrs-cxf.md -->
-            <!-- options see https://github.com/OpenAPITools/openapi-generator/tree/master/modules/openapi-generator-maven-plugin -->
-            <!-- snapshots see https://oss.sonatype.org/content/repositories/snapshots/org/openapitools/openapi-generator-maven-plugin/ -->
-            <plugin>
-                <artifactId>openapi-generator-maven-plugin</artifactId>
-                <version>4.3.0</version>
-                <groupId>org.openapitools</groupId>
-                <executions>
-                    <execution>
-                        <id>generate-openapi-fdvB</id>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
+    <profiles>
+        <profile>
+        <id>gen</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <version>3.8.1</version>
                         <configuration>
-
-                            <inputSpec>${project.basedir}/schema/testtreiber_fdv.yaml</inputSpec>
-                            <generatorName>jaxrs-cxf</generatorName>
-                            <output>${project.basedir}</output>
-                            <addCompileSourceRoot>false</addCompileSourceRoot>
-                            <configOptions>
-                                <java8>true</java8>
-                                <sourceFolder>src/main/java</sourceFolder>
-                            </configOptions>
-                            <modelPackage>org.fluentcodes.ihe.gematik.fdv.model</modelPackage>
-                            <apiPackage>org.fluentcodes.ihe.gematik.fdv.api</apiPackage>
-                            <!-- java 8 type mapping -->
-                            <!--https://stackoverflow.com/questions/56237650/use-java-time-instant-to-represent-datetime-instead-of-offsetdatetime-->
-                            <typeMappings>
-                                <typeMapping>DateTime=Instant</typeMapping>
-                                <typeMapping>Date=LocalDate</typeMapping>
-                                <typeMapping>OffsetDateTime=LocalDateTime</typeMapping>
-                                <typeMapping>OffsetDate=LocalDate</typeMapping>
-                            </typeMappings>
-                            <importMappings>
-                                <importMapping>Instant=java.time.Instant</importMapping>
-                                <importMapping>LocalDate=java.time.LocalDate</importMapping>
-                                <importMapping>java.time.OffsetDateTime=java.time.LocalDateTime</importMapping>
-                                <importMapping>java.time.OffsetDate=java.time.LocalDate</importMapping>
-                            </importMappings>
+                            <source>11</source>
+                            <target>11</target>
                         </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
+                    </plugin>
+                    <!-- options see https://github.com/OpenAPITools/openapi-generator/blob/master/docs/generators/jaxrs-cxf.md -->
+                    <!-- options see https://github.com/OpenAPITools/openapi-generator/tree/master/modules/openapi-generator-maven-plugin -->
+                    <!-- snapshots see https://oss.sonatype.org/content/repositories/snapshots/org/openapitools/openapi-generator-maven-plugin/ -->
+                    <plugin>
+                        <artifactId>openapi-generator-maven-plugin</artifactId>
+                        <version>4.3.0</version>
+                        <groupId>org.openapitools</groupId>
+                        <executions>
+                            <execution>
+                                <id>generate-openapi-fdvB</id>
+                                <goals>
+                                    <goal>generate</goal>
+                                </goals>
+                                <configuration>
 
+                                    <inputSpec>${project.basedir}/schema/testtreiber_fdv.yaml</inputSpec>
+                                    <generatorName>jaxrs-cxf</generatorName>
+                                    <output>${project.basedir}</output>
+                                    <addCompileSourceRoot>false</addCompileSourceRoot>
+                                    <configOptions>
+                                        <java8>true</java8>
+                                        <sourceFolder>src/main/java</sourceFolder>
+                                    </configOptions>
+                                    <modelPackage>org.fluentcodes.ihe.gematik.fdv.model</modelPackage>
+                                    <apiPackage>org.fluentcodes.ihe.gematik.fdv.api</apiPackage>
+                                    <!-- java 8 type mapping -->
+                                    <!--https://stackoverflow.com/questions/56237650/use-java-time-instant-to-represent-datetime-instead-of-offsetdatetime-->
+                                    <typeMappings>
+                                        <typeMapping>DateTime=Instant</typeMapping>
+                                        <typeMapping>Date=LocalDate</typeMapping>
+                                        <typeMapping>OffsetDateTime=LocalDateTime</typeMapping>
+                                        <typeMapping>OffsetDate=LocalDate</typeMapping>
+                                    </typeMappings>
+                                    <importMappings>
+                                        <importMapping>Instant=java.time.Instant</importMapping>
+                                        <importMapping>LocalDate=java.time.LocalDate</importMapping>
+                                        <importMapping>java.time.OffsetDateTime=java.time.LocalDateTime</importMapping>
+                                        <importMapping>java.time.OffsetDate=java.time.LocalDate</importMapping>
+                                    </importMappings>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
 </project>
