Try to ignore ihe modules in git

--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,9 @@
 .settings
 .springBeans
 .sts4-cache
-gen-ihe/**
-gen-cda/**
+/gen-ihe/**
+/ihe-germany/**
+/gen-cda/**
 ### IntelliJ IDEA ###
 .idea
 *.iws
