--- a/gen-xacml/pom.xml
+++ b/gen-xacml/pom.xml
@@ -14,7 +14,7 @@
 	<parent>
 		<groupId>org.fluentcodes.ihe</groupId>
 		<artifactId>ihe-generate</artifactId>
-		<version>0.1.0</version>
+		<version>0.2.0</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
@@ -31,42 +31,47 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.jvnet.jaxb2.maven2</groupId>
-				<artifactId>maven-jaxb23-plugin</artifactId>
-				<version>0.14.0</version>
-				<executions>
-					<execution>
-						<id>generate</id>
-						<goals>
-							<goal>generate</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<args>
-						<arg>-Xdefault-value</arg>
-					</args>
-					<plugins>
-						<plugin>
-							<groupId>org.jvnet.jaxb2_commons</groupId>
-							<artifactId>jaxb2-default-value</artifactId>
-							<version>1.1</version>
-						</plugin>
-					</plugins>
-					<schemaDirectory>${basedir}/schema</schemaDirectory>
-					<generateDirectory>${project.build.sourceDirectory}</generateDirectory>
-					<encoding>${project.build.sourceEncoding}</encoding>
-					<noFileHeader>true</noFileHeader>
-					<episode>false</episode>
-					<schemaIncludes>
-						<include>*.xsd</include>
-						<include>access-control-xacml-2.0-policy-schema-os.xsd</include>
-					</schemaIncludes>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+	<profiles>
+		<profile>
+			<id>deploy</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.jvnet.jaxb2.maven2</groupId>
+						<artifactId>maven-jaxb23-plugin</artifactId>
+						<version>0.14.0</version>
+						<executions>
+							<execution>
+								<id>generate</id>
+								<goals>
+									<goal>generate</goal>
+								</goals>
+							</execution>
+						</executions>
+						<configuration>
+							<args>
+								<arg>-Xdefault-value</arg>
+							</args>
+							<plugins>
+								<plugin>
+									<groupId>org.jvnet.jaxb2_commons</groupId>
+									<artifactId>jaxb2-default-value</artifactId>
+									<version>1.1</version>
+								</plugin>
+							</plugins>
+							<schemaDirectory>${basedir}/schema</schemaDirectory>
+							<generateDirectory>${project.build.sourceDirectory}</generateDirectory>
+							<encoding>${project.build.sourceEncoding}</encoding>
+							<noFileHeader>true</noFileHeader>
+							<episode>false</episode>
+							<schemaIncludes>
+								<include>*.xsd</include>
+								<include>access-control-xacml-2.0-policy-schema-os.xsd</include>
+							</schemaIncludes>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
