--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 	</developers>
 
 	<modules>
-		<!--module>gen-hl7</module-->
+		<module>gen-hl7</module>
 		<!--module>gen-cda</module-->
 		<!--module>gen-xacml</module-->
 		<module>gen-fdv-json-testtreiber</module>
