--- a/gen-fdv-json-testtreiber/pom.xml
+++ b/gen-fdv-json-testtreiber/pom.xml
@@ -6,16 +6,16 @@
 
     <groupId>org.fluentcodes.ihe</groupId>
     <artifactId>gen-fdv-json-testtreiber</artifactId>
-    <name>generated fdv json testtreiber V1.1.1.8</name>
-    <version>0.2.1</version>
+    <name>generated fdv json testtreiber</name>
+    <version>2.0.4</version>
     <description>OpenAPI generated classes with Java 8 for the testtreiber fdv interface. </description>
 
-    <parent>
-        <groupId>org.fluentcodes.ihe</groupId>
-        <artifactId>ihe-generate</artifactId>
-        <version>0.2.1</version>
-        <relativePath>../pom.xml</relativePath>
-    </parent>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -32,7 +32,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.jaxrs</groupId>
             <artifactId>jackson-jaxrs-json-provider</artifactId>
-            <version>2.10.3</version>
+            <version>2.13.1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.cxf</groupId>
@@ -44,28 +44,73 @@
             <groupId>io.swagger</groupId>
             <artifactId>swagger-jaxrs</artifactId>
             <scope>provided</scope>
-            <version>1.6.0</version>
+            <version>1.6.4</version>
         </dependency>
         <dependency>
             <groupId>io.swagger</groupId>
             <artifactId>swagger-annotations</artifactId>
             <scope>provided</scope>
-            <version>1.6.0</version>
+            <version>1.6.4</version>
         </dependency>
         <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
-            <version>2.10.1</version>
+            <version>2.10.13</version>
         </dependency>
-        <!--dependency>
-            <groupId>org.fluentcodes.tools</groupId>
-            <artifactId>xpect-snake</artifactId>
-            <version>0.6.0</version>
-        </dependency-->
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>maven</id>
+            <url>https://mvnrepository.com/artifact/</url>
+        </repository>
+    </repositories>
+
+    <url>https://gitlab.com/fluentcodes/Tools</url>
+    <scm>
+        <connection>:git:git://github.com/fluentcodes/ihe-generate.git</connection>
+        <developerConnection>scm:git:ssh://github.com/fluentcodes/ihe-generate.git</developerConnection>
+        <url>https://github.com/fluentcodes/ihe-generate.git</url>
+    </scm>
+
+    <issueManagement>
+        <system>Gitlab issues.</system>
+        <url>https://gitlab.com/dashboard/issues?assignee_username=fluentcodes</url>
+    </issueManagement>
+
+    <licenses>
+        <license>
+            <name>Apache License Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <id>wdi</id>
+            <name>Werner Diwischek</name>
+            <email>fluentcodes@gmail.com</email>
+        </developer>
+    </developers>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <profiles>
         <profile>
-        <id>gen</id>
+        <id>generate</id>
             <build>
                 <plugins>
                     <!-- options see https://github.com/OpenAPITools/openapi-generator/blob/master/docs/generators/jaxrs-cxf.md -->
@@ -73,7 +118,7 @@
                     <!-- snapshots see https://oss.sonatype.org/content/repositories/snapshots/org/openapitools/openapi-generator-maven-plugin/ -->
                     <plugin>
                         <artifactId>openapi-generator-maven-plugin</artifactId>
-                        <version>4.3.0</version>
+                        <version>5.4.0</version>
                         <groupId>org.openapitools</groupId>
                         <executions>
                             <execution>
@@ -108,6 +153,68 @@
                                         <importMapping>java.time.OffsetDate=java.time.LocalDate</importMapping>
                                     </importMappings>
                                 </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>deploy</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-source-plugin</artifactId>
+                        <version>3.0.1</version>
+                        <executions>
+                            <execution>
+                                <id>attach-sources</id>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>3.1.1</version>
+                        <configuration>
+                            <doclint>none</doclint>  <!-- Turnoff all checks -->
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>attach-javadocs</id>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.sonatype.plugins</groupId>
+                        <artifactId>nexus-staging-maven-plugin</artifactId>
+                        <version>1.6.8</version>
+                        <extensions>true</extensions>
+                        <configuration>
+                            <serverId>ossrh</serverId>
+                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <version>1.5</version>
+                        <executions>
+                            <execution>
+                                <id>sign-artifacts</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
                             </execution>
                         </executions>
                     </plugin>
