--- a/gen-ebrs/pom.xml
+++ b/gen-ebrs/pom.xml
@@ -6,62 +6,119 @@
 
 	<groupId>org.fluentcodes.ihe</groupId>
 	<artifactId>contracts-ebRS</artifactId>
-	<version>0.2.1</version>
+	<version>3.0</version>
 
 	<name>ebXML: Classes and Wrapper</name>
 	<description>ebXML: jaxb generated sources  from ebRS 3.0 schema files fand anonym Wrapper classes 2005 https://docs.oasis-open.org/regrep/v3.0/specs/regrep-rim-3.0-os.pdf. Using Java 8 instead of the initial Java 11.</description>
 
-	<parent>
-		<groupId>org.fluentcodes.ihe</groupId>
-		<artifactId>ihe-generate</artifactId>
-		<version>0.2.1</version>
-		<relativePath>../pom.xml</relativePath>
-	</parent>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+				<configuration>
+					<source>8</source>
+					<target>8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 	<dependencies>
-		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-core</artifactId>
-			<version>2.17.1</version>
-		</dependency>
 		<dependency>
 			<groupId>javax.xml.bind</groupId>
 			<artifactId>jaxb-api</artifactId>
 			<version>2.3.1</version>
 		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.13.2</version>
-			<scope>test</scope>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.fluentcodes.tools/xpect-gson-->
-		<dependency>
-			<groupId>org.fluentcodes.tools</groupId>
-			<artifactId>xpect-jackson</artifactId>
-			<version>0.7.0</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.fluentcodes.tools</groupId>
-			<artifactId>xpect-gson</artifactId>
-			<version>0.7.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.fluentcodes.tools</groupId>
-			<artifactId>xpect-jaxb</artifactId>
-			<version>0.7.0</version>
-			<scope>test</scope>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
-		<dependency>
-			<groupId>org.assertj</groupId>
-			<artifactId>assertj-core</artifactId>
-			<version>3.16.1</version>
-			<scope>test</scope>
-		</dependency>
 	</dependencies>
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+
+	<repositories>
+		<repository>
+			<id>maven</id>
+			<url>https://mvnrepository.com/artifact/</url>
+		</repository>
+	</repositories>
+
+	<url>https://github.com/fluentcodes/ihe-generate</url>
+
+	<licenses>
+		<license>
+			<name>Apache License Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+
+	<developers>
+		<developer>
+			<id>wdi</id>
+			<name>Werner Diwischek</name>
+			<email>fluentcodes@gmail.com</email>
+		</developer>
+	</developers>
+
+	<distributionManagement>
+		<repository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+		</repository>
+		<snapshotRepository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
+	</distributionManagement>
+
 	<profiles>
+		<profile>
+			<id>deploy</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.jvnet.jaxb2.maven2</groupId>
+						<artifactId>maven-jaxb23-plugin</artifactId>
+						<version>0.14.0</version>
+						<executions>
+							<execution>
+								<id>generate</id>
+								<phase>generate-sources</phase>
+								<goals>
+									<goal>generate</goal>
+								</goals>
+							</execution>
+						</executions>
+						<configuration>
+							<args>
+								<arg>-Xdefault-value</arg>
+							</args>
+							<plugins>
+								<plugin>
+									<groupId>org.jvnet.jaxb2_commons</groupId>
+									<artifactId>jaxb2-default-value</artifactId>
+									<version>1.1</version>
+								</plugin>
+							</plugins>
+							<schemaDirectory>${basedir}/schema</schemaDirectory>
+							<bindingDirectory>${basedir}/src/main/resources</bindingDirectory>
+							<cleanPackageDirectories>true</cleanPackageDirectories>
+							<generateDirectory>${basedir}/src/main/java</generateDirectory>
+							<encoding>${project.build.sourceEncoding}</encoding>
+							<noFileHeader>true</noFileHeader>
+							<episode>false</episode>
+							<schemaIncludes>
+								<include>coreschemas/*.xsd</include>
+								<include>multicacheschemas/*.xsd</include>
+							</schemaIncludes>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
 		<profile>
 			<id>gen</id>
 			<build>
@@ -108,4 +165,5 @@
 			</build>
 		</profile>
 	</profiles>
+
 </project>
